# opengl-triangle

./: .gitignore  CMakeLists.txt  README.md
include/: from_hex.h  read_glsl.h
include/glad/: glad.h
src/: from_hex.cpp  main.cpp  read_glsl.cpp
src/glad/: glad.c
